--- a/components/ScrollComponent/ScrollComponent.module.css
+++ b/components/ScrollComponent/ScrollComponent.module.css
@@ -15,6 +15,7 @@
   transform: translate(-50%, -50%);
   font-size: 60px;
   color: white;
+  text-align: center;
 }
 
 .intro h2 {
@@ -27,14 +28,31 @@
 }
 
 .section {
+  position: relative;
+  background-color: black;
   height: 100vh;
-  color: black;
 }
 
 .section h1 {
-  position: relative;
-  padding-top: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   font-size: 60px;
-  color: black;
+  /* color: black; */
+}
+
+.videoContainer {
+  position: relative;
+  height: 100vh;
+}
+
+.bgContainer {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  z-index: 1;
+  height: 100vh;
+  width: 100%;
 }
